# hermes

./: .dockerignore  .gitattributes  .gitignore  .mockery.yaml  Cargo.toml  Makefile  README.md  build.js  docker-compose.yml  eslint.config.mjs  go.mod  go.sum  hermes.json  jest.config.js  mkdocs.yml  package.json  tsconfig.eslint.json  tsconfig.json  zensical.toml
.github/: VSCODE_MARKETPLACE_SETUP.md
.github/workflows/: build-fprime-nightly.yml  build-go-binaries.yml  build-rust-crates.yml  build-vscode-extensions.yml  deploy-docs.yml  docker.yml  docs-deploy.yml  docs.yml  fprime-build-template.yml  integration-test-template.yml  integration-tests.yml  nightly-fprime-build.yml  template-build-fprime.yml  template-test-integration.yml  test-integration.yml
cmd/backend/: channel.go  downlink.go  evr.go  main.go
cmd/dict/: README.md  main.go
cmd/downlink-pb-to-json/: README.md  main.go
cmd/fprime-decode/: main.go
cmd/protocolc/: README.md  main.go
cmd/sqlrecord/: config.go  main.go  recorder.go  rsvplite-timescale-uml.drawio  sqlhelper.go  sqlite.go  sqlite_test.go  timescale.go  timescale_test.go
cmd/uplink/: README.md  main.go
config/: grafana-config.ini  grafana-dashboards.yaml  loki-config.yaml
config/dashboards/: downlink.json
crates/hermes-data/: Cargo.toml
crates/hermes-data/src/: bit_vec.rs  calibrator.rs  command.rs  container.rs  deserialize.rs  error.rs  framing.rs  item.rs  lib.rs  parameter.rs  types.rs  util.rs
crates/hermes-data/src/de/: bit_vec.rs  container.rs  context.rs  deserialize.rs  expr.rs  mod.rs
crates/hermes-data/src/deserialize/: container.rs  context.rs  deserialize.rs  expr.rs  mod.rs
crates/hermes-data/src/ser/: container.rs  context.rs  mod.rs  serialize.rs
crates/hermes-data/src/xtce/: collection.rs  construction.rs  container.rs  conversion.rs  mod.rs  resolution.rs  types.rs  utils.rs
crates/hermes-data/tests/: test_bit_size_validation.rs  test_command_flattening.rs  test_command_serialization.rs  test_command_validation.rs  test_container_loading.rs  test_deserialization.rs  test_deserialization_aggregate.rs  test_fully_qualified_names.rs  test_parameter_loading.rs  test_type_resolution.rs  test_xtce_integration.rs
crates/hermes-data/tests/common/: mod.rs
crates/hermes-decode/: Cargo.toml  README.md
crates/hermes-decode/src/: app.rs  link.rs  main.rs  packets.rs  terminal.rs  ui.rs
crates/hermes-decode/src/widgets/: data.rs  mod.rs  structure.rs
crates/hermes-fprime-dictionary/: Cargo.toml  MIGRATION.md  README.md
crates/hermes-fprime-dictionary/src/: command.rs  common.rs  error.rs  event.rs  fprime.rs  lib.rs  main.rs  parameter.rs  telemetry.rs
crates/hermes-fprime-dictionary/test/: ReferenceDeploymentTopologyDictionary.json
crates/hermes-fprime-dictionary/tests/: cli_test.rs
crates/hermes-pb/: Cargo.toml  README.md  build.rs
crates/hermes-server/: Cargo.toml  README.md  build.rs
crates/hermes-xtce/: Cargo.toml  DEBUGGING_SUMMARY.md  DEBUG_NOTES.md  README.md  build.rs
crates/hermes-xtce/schema/: xtce-v1.3.xsd
crates/hermes-xtce/src/: .gitattributes  helpers.rs  lib.rs  serde_helpers.rs
crates/hermes-xtce/src/schema/: mod.rs  xml.rs  xs.rs  xtce.rs
crates/hermes-xtce/tests/: loader.rs  writer.rs
crates/hermes-xtce/tests/data/: .gitignore  command_with_container.xtce.xml  example.xtce.xml  fprime.xtce.xml  minimal.pretty-namespaces.ref.xml  minimal.pretty.ref.xml  minimal.serialize.ref.xml  minimal.writer.ref.xml  minimal.xtce.xml  minimal_command.xtce.xml  simple_command.xtce.xml
crates/hermes-yamcs/: Cargo.toml  README.md
crates/hermes-yamcs-fprime-events/: Cargo.toml
crates/hermes-yamcs/src/: convert.rs  main.rs  service.rs
crates/yamcs-http/: COMPREHENSIVE_VALIDATION_FIXES.md  Cargo.toml  README.md  VALIDATION_FIXES.md
crates/yamcs-http/examples/: authenticated.rs  auto_cancel_subscription.rs  basic.rs  comprehensive.rs  websocket_subscriptions.rs
crates/yamcs-http/src/: auth.rs  client.rs  error.rs  http.rs  lib.rs
crates/yamcs-http/src/types/: alarms.rs  common.rs  events.rs  mdb.rs  mod.rs  monitoring.rs  system.rs
crates/yamcs-http/src/websocket/: client.rs  mod.rs  subscription.rs
crates/yamcs-http/tests/: integration_tests.rs
docker/: Dockerfile  Dockerfile.backend  Dockerfile.fprime
docs/: TASKS.md  architecture.md  index.md  mkdocs.yml
docs/api/: go.md  index.md  python.md  rust.md  typescript.md
docs/arch/: core-concepts.md  system-design.md
docs/docs/: index.md
docs/getting-started/: installation.md  quick-start.md  workflow.md
docs/ops/: testbed.md
docs/prod/: dev.md  index.md  mission.md  testbed.md
docs/tlm/: grafana.md  index.md
lib/python/: __init__.py  bus_pb2.py  bus_pb2.pyi  dictionary_pb2.py  dictionary_pb2.pyi  file_pb2.py  file_pb2.pyi  fsw_pb2.py  fsw_pb2.pyi  hermes_pb2.pyi  hermes_pb2_grpc.py  msg_pb2.py  msg_pb2.pyi  profile_pb2.py  profile_pb2.pyi  time_pb2.py  time_pb2.pyi  type_pb2.py  type_pb2.pyi
mocks/: mock_ConnectSession.go  mock_ProfileProvider.go
patches/: protobufjs-cli+1.1.3.patch
pkg/ccsds/: README.md  ccsds.protocol  packet.go  reader.go  type.go
pkg/client/: README.md  client.go  creds.go
pkg/cmd/: README.md  arg.go  cmd.go  cmd_test.go  lex.go
pkg/dwn/: README.md  downlink.go  downlink_test.go
test/: .gitignore  README.md  api_test.go  docker-compose.yml  fprime_test.go  util.go
(+563 files in other folders)
