[package]
name = "hermes-fprime-dictionary"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "hermes-fprime-dictionary"
path = "src/main.rs"

[dependencies]
hermes-pb = { path = "../hermes-pb" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.11"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"
