[package]
name = "hermes-xtce"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde-enum-str = "0.3"
serde = { version = "1.0.228", features = ["derive"] }

[features]
codegen = [
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:xsd-parser",
    "dep:anyhow",
    "dep:syn",
]

[dev-dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }

[build-dependencies]
prettyplease = { version = "0.2.37", optional = true }
proc-macro2 = { version = "1.0.106", optional = true }
xsd-parser = { version = "1.1.0", optional = true }
anyhow = { version = "1.0.102", optional = true }
syn = { version = "2.0.117", optional = true }
