[package]
name = "hermes-xtce"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde-enum-str = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }

[features]
codegen = [
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:xsd-parser",
    "dep:anyhow",
    "dep:syn",
]

[dev-dependencies]
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde_path_to_error = "0.1.20"

[build-dependencies]
prettyplease = { version = "0.2.37", optional = true }
proc-macro2 = { version = "1.0.106", optional = true }
xsd-parser = { version = "1.1.0", optional = true }
anyhow = { version = "1.0.102", optional = true }
syn = { version = "2.0.117", optional = true }
