[package]
name = "hermes-yamcs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ygw = "0.8.0"
hermes-pb = { path = "../hermes-pb" }
hermes-server = { path = "../hermes-server" }
yamcs-http = { path = "../yamcs-http", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost-types = "0.13"
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
